--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,25 +17,24 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name="io.antmedia.android.MainActivity"></activity>
+        <activity
+            android:name=".LiveVideoBroadcasterActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/AppThemeDark" />
+        <activity
+            android:name="io.antmedia.android.liveVideoPlayer.LiveVideoPlayerActivity"
+            android:theme="@style/AppThemeDark" />
 
-        <activity android:name="io.antmedia.android.MainActivity">
+        <service android:name="io.antmedia.android.broadcaster.LiveVideoBroadcaster" />
+
+        <activity android:name="io.antmedia.android.FirstEnterIp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="io.antmedia.android.liveVideoBroadcaster.LiveVideoBroadcasterActivity"
-            android:theme="@style/AppThemeDark"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            />
-
-        <activity android:name="io.antmedia.android.liveVideoPlayer.LiveVideoPlayerActivity"
-            android:theme="@style/AppThemeDark"
-            />
-
-        <service android:name="io.antmedia.android.broadcaster.LiveVideoBroadcaster" />
     </application>
 
 </manifest>
